Terceira aula finalizada ate o minuto 25 e 22 da 4 aula

--- a/backendAlura/Projetos/INSTALIKE-BACK/.gitignore
+++ b/backendAlura/Projetos/INSTALIKE-BACK/.gitignore
@@ -1,2 +1,4 @@
 node_modules
 chave-api.txt
+.env
+mongodb+srv://miltonrmdf:<db_password>@cluster0.6ijxz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
