--- a/backendAlura/Projetos/INSTALIKE-BACK/package.json
+++ b/backendAlura/Projetos/INSTALIKE-BACK/package.json
@@ -24,10 +24,12 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "",
+    "dev": "node --watch --env-file=.env server.js",
     "test": ""
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mdb": "^0.1.0",
+    "mongodb": "^6.11.0"
   }
 }
